--- a/styleMenu.css
+++ b/styleMenu.css
@@ -66,7 +66,6 @@ main {
 .menu {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   background-color: white;
   margin-top: 240px;
@@ -93,24 +92,24 @@ main {
 .tousCarte {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  height: 1050px;
 }
 
 .carte {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   width: 450px;
-  height: 330px;
 }
 .carte .type {
   font-size: 1.3em;
   width: 55px;
-  padding-bottom: 3px;
+  padding-bottom: 5px;
   margin-right: 350px;
+  margin-bottom: 16px;
   border-bottom: 4px solid #99E2D0;
+}
+.carte .type2 {
+  margin-top: 20px;
 }
 .carte .commande {
   display: flex;
@@ -121,6 +120,7 @@ main {
   background-color: white;
   box-shadow: 0px 3px 5px #ebebeb;
   border-radius: 17px;
+  margin-bottom: 16px;
 }
 .carte .commande .plat {
   font-weight: bold;
@@ -151,6 +151,7 @@ main {
   align-items: center;
   height: 120px;
   margin-bottom: 70px;
+  margin-top: 15px;
 }
 
 .commanderBTN {
@@ -211,4 +212,4 @@ footer {
   font-size: 15px;
 }
 
-/*# sourceMappingURL=styleALaFrancaise.css.map */
+/*# sourceMappingURL=styleMenu.css.map */
