Ajout des animations

--- a/sass/styleMenu.scss
+++ b/sass/styleMenu.scss
@@ -5,10 +5,13 @@
 }
 
 @font-face {
+    font-family: 'Shrikhand';
+    src: url(Shrikhand-Regular.ttf);
+}
+
+@font-face {
     font-family: 'Roboto';
     src: url(Roboto-Regular.ttf);
-    font-family: 'Shrikhand';
-    src:url(Shrikhand-Regular.ttf)
 }
 
 body{
@@ -89,10 +92,64 @@ main{
     }
 
     .coeur{
-        font-size: 25px;
-        margin-right: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100px;
+
+        .coeurPlein{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            z-index: 2;
+            font-size: 25px;
+            color: #9356DC;
+            opacity: 0;
+            border: solid;
+        
+            &:hover{
+                animation-fill-mode: forwards;
+                animation-duration: 2s;
+                animation-name: animCoeur;
+        
+                @keyframes animCoeur {
+                    0% { opacity: 0; }
+                    10% { opacity: 0.1; }
+                    20% { opacity: 0.2; }
+                    30% { opacity: 0.3; }
+                    40% { opacity: 0.4; }
+                    50% { opacity: 0.5; }
+                    60% { opacity: 0.6; }
+                    70% { opacity: 0.7; }
+                    80% { opacity: 0.8; }
+                    90% { opacity: 0.9; }
+                    100% { opacity: 1; }
+                }
+            }
+        
+            &:hover + .coeurVide{
+                animation-duration: 2s;
+                animation-name: animCoeurEf;
+                
+                @keyframes animCoeurEf {
+                    0% { color: #000000;}
+                    50% { color: #ffffff;}
+                    100% { color: #ffffff;}
+                }
+            }
+        }
+
+        .coeurVide{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 25px;
+            z-index: 1;
+        }
     }
 }
+
 
 .tousCarte{
     display: flex;
@@ -106,7 +163,7 @@ main{
     width: 450px;
 
     .type{
-        font-size: 1.3em;
+        font-size: 1.2em;
         width: 55px;
         padding-bottom: 5px;
         margin-right: 350px;
@@ -120,41 +177,140 @@ main{
 
     .commande{
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
         width: 420px;
         height: 80px;
-        background-color: white;
-        box-shadow: 0px 3px 5px #ebebeb;
         border-radius: 17px;
         margin-bottom: 16px;
+        background-color: white;
+        box-shadow: 0px 3px 5px #ebebeb;
+        cursor: pointer;
 
-        .plat{
-            font-weight: bold;
-            font-size: 1.4em;
-            margin-left: 12px;
-            margin-bottom: 3px;
+        &:hover > .JCP{
+            width: 300px;
         }
 
-        .info{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 3px;
+        &:hover > .coche{
+            margin-left: 25px;
 
-            .ingredient{
-                font-size: 1.1em;
-                margin-left: 12px;
+            .check{
+                animation: animCheck 1s;
+                animation-fill-mode: forwards;
+
+                @keyframes animCheck {
+                    0%{ transform: rotate(0deg);}
+                    100%{ transform: rotate(360deg);}
+                }
+            }
+        }
+
+        .JCP{
+            display: flex;
+            width: 400px;
+            margin-left: 15px;
+            transition: width 200ms linear;
+            
+            .info{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                overflow: hidden;
+                width: 350px;
+
+                .plat{
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    font-weight: bold;
+                    font-size: 1.3em;
+                    margin-bottom: 6px;
+
+                }
+
+                .ingredient{
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    font-size: 1.05em;
+
+                }
             }
 
             .prix{
                 display: flex;
-                align-items: center;
+                align-items: flex-end;
                 font-weight: bold;
                 font-size: 1.1em;
-                margin-right: 22px;
+                margin-bottom: 14px;
             }
         }
+
+        .coche{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #99E2D0;
+            width: 80px;
+            min-width: 80px;
+            height: 80px;
+            margin-left: 55px;
+            transition: all 200ms linear;
+
+            .check{
+                font-size: 30px;
+                color: white;
+            }
+        }
+    }
+}
+
+
+
+#commande1{
+    opacity: 0;
+    animation: apparitionco1 2s;
+    animation-fill-mode: forwards;
+
+    @keyframes apparitionco1 {
+        0% { opacity:0; margin-top: 15px;}
+        100% { opacity:1; margin-top: 0px;}
+    }
+}
+
+#commande2{
+    opacity: 0;
+    animation: apparitionco2 2s;
+    animation-fill-mode: forwards;
+
+    @keyframes apparitionco2 {
+        0% { opacity:0; margin-top: 15px;}
+        20% { opacity:0;}
+        100% { opacity:1; margin-top: 0px;}
+    }
+}
+
+#commande3{
+    opacity: 0;
+    animation: apparitionco3 2s;
+    animation-fill-mode: forwards;
+
+    @keyframes apparitionco3 {
+        0% { opacity:0; margin-top: 15px;}
+        40% { opacity:0;}
+        100% { opacity:1; margin-top: 0px;}
+    }
+}
+
+#commande4{
+    opacity: 0;
+    animation: apparitionco4 2s;
+    animation-fill-mode: forwards;
+
+    @keyframes apparitionco4 {
+        0% { opacity:0; margin-top: 15px;}
+        60% { opacity:0;}
+        100% { opacity:1; margin-top: 0px;}
     }
 }
 
@@ -204,7 +360,7 @@ footer{
     .footerRestaurant{
         display: flex;
         justify-content: space-between;
-        width: 217px;
+        width: 250px;
 
         .footerRestaurantIcon{
             display: flex;
@@ -217,7 +373,7 @@ footer{
     .footerPartenaire{
         display: flex;
         justify-content: space-between;
-        width: 185px;
+        width: 206px;
 
         .footerPartenaireIcon{
             display: flex;
@@ -227,3 +383,4 @@ footer{
         }
     }
 }
+
