--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,14 +17,14 @@ body{
     font-family: 'Roboto';
     animation: scrolling 3s;
 
-    /*@keyframes scrolling{
+    @keyframes scrolling{
         0% { overflow: hidden;}
         100% { overflow: hidden;}
-    }*/
+    }
 }
 
 
-/*@mixin carréTaille {
+@mixin carréTaille {
     width: 20px;
     height: 20px;
 }
@@ -342,7 +342,7 @@ body{
         0% { opacity: 0.2; z-index: 1;}
         100% { opacity: 0.2; z-index: 1;}
     }
-}*/
+}
 
 img{
     object-fit: cover;
@@ -671,7 +671,62 @@ footer{
     }
 }
 
-@media screen and (max-width: 800px){
+@media  screen and (max-width: 1400px) {
+    
+    .localisation{
+        width: 900px;
+    }
+
+    .explorer{
+        width: 900px;
+
+    }
+
+    .fonctionnement{
+        width: 900px;
+
+    }
+
+    .fonctionnementTitre{
+        font-size: 1.6em;
+    }
+
+    .fonctionnementTous{
+        flex-direction: column;
+        justify-content: space-around;
+        height: 350px;
+    }
+    
+    .restaurantTous{
+        display: flex;
+        justify-content: space-evenly;
+        align-content: space-between;
+        width: 850px;
+    }
+
+    footer{
+        flex-direction: column;
+        width: 900px;
+        height: 240px;
+    }
+
+    .footerLogo{
+        margin-left: 30px;
+        margin-top: 0px;
+    }
+
+    .footerTous{
+        flex-direction: column;
+        justify-content: space-between;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        height: 130px;
+        text-decoration: none;
+        width: 450px;
+    }
+}
+
+@media screen and (max-width: 930px){
 
     .localisation{
         width: 450px;
