--- a/sass/styleMenu.scss
+++ b/sass/styleMenu.scss
@@ -390,11 +390,79 @@ footer{
     }
 }
 
+@media screen and (max-width: 1525px) {
+       
+    header{
+        width: 700px;
+    }
+    
+    .navigation{
+        justify-content: space-between;
+        width: 700px;
+
+        .headerLogo{
+            margin-right: 260px;
+            margin-left: 0px;
+        }
+    }
+
+    main{
+        width: 700px;
+    }
+
+    .mainImage{
+        width: 700px;
+        height: 400px;
+        top: -5%;
+    }
+
+    .menu{
+        margin-top: 240px;
+        width: 700px;
+    }
+
+    .titreRestaurant{
+        width: 700px;
+    }
+
+
+    .tousCarte{
+        flex-direction: column;
+    }
+
+    .type2{
+        margin-top: 20px;
+    }
+
+    footer{
+        flex-direction: column;
+        width: 700px;
+        height: 240px;
+    }
+
+    .footerLogo{
+        margin-left: 30px;
+        margin-top: 0px;
+    }
+
+    .footerTous{
+        flex-direction: column;
+        justify-content: space-between;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        height: 130px;
+        text-decoration: none;
+        width: 700px;
+    }
+}
+
+
 @media screen and (max-width: 930px) {
     
     header{
         width: 450px;
     }
+
     .navigation{
         justify-content: space-between;
         width: 450px;
