--- a/sass/styleMenu.scss
+++ b/sass/styleMenu.scss
@@ -110,9 +110,10 @@ main{
             position: absolute;
             z-index: 2;
             font-size: 25px;
-            color: #9356DC;
             opacity: 0;
-            border: solid;
+            background: -webkit-linear-gradient(172deg,#FF79DA, #9356DC );
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         
             &:hover{
                 animation-fill-mode: forwards;
@@ -137,6 +138,7 @@ main{
             &:hover + .coeurVide{
                 animation-duration: 2s;
                 animation-name: animCoeurEf;
+                animation-fill-mode: forwards;
                 
                 @keyframes animCoeurEf {
                     0% { color: #000000;}
