--- a/styleMenu.css
+++ b/styleMenu.css
@@ -106,7 +106,7 @@ main {
   font-size: 25px;
   opacity: 0;
   background: -webkit-linear-gradient(172deg, #FF79DA, #9356DC);
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 .titreRestaurant .coeur .coeurPlein:hover {
@@ -271,7 +271,7 @@ main {
   color: white;
 }
 
-#commande1 {
+.commande1 {
   opacity: 0;
   animation: apparitionco1 2s;
   animation-fill-mode: forwards;
@@ -287,7 +287,7 @@ main {
   }
 }
 
-#commande2 {
+.commande2 {
   opacity: 0;
   animation: apparitionco2 2s;
   animation-fill-mode: forwards;
@@ -306,7 +306,7 @@ main {
   }
 }
 
-#commande3 {
+.commande3 {
   opacity: 0;
   animation: apparitionco3 2s;
   animation-fill-mode: forwards;
@@ -325,7 +325,7 @@ main {
   }
 }
 
-#commande4 {
+.commande4 {
   opacity: 0;
   animation: apparitionco4 2s;
   animation-fill-mode: forwards;
