--- a/sass/style.scss
+++ b/sass/style.scss
@@ -570,6 +570,9 @@ img{
                 font-size: 25px;
                 color: #9356DC;
                 opacity: 0;
+                background: -webkit-linear-gradient(172deg,#FF79DA, #9356DC );
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             
                 &:hover{
                     animation-fill-mode: forwards;
@@ -594,6 +597,7 @@ img{
                 &:hover + .coeurVide{
                     animation-duration: 2s;
                     animation-name: animCoeurEf;
+                    animation-fill-mode: forwards;
                     
                     @keyframes animCoeurEf {
                         0% { color: #000000;}
